--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "riscv.h": "c",
-        "proc.h": "c"
+        "proc.h": "c",
+        "defs.h": "c",
+        "sysinfo.h": "c"
     }
 }
